internal/predicate/testdata/reject/computed_attr_access.lua
entity[has_role(current_user, 'x')]
